<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/carnet"/>

        <EditText
            android:id="@+id/editCarnet"
            android:hint="@string/carnet"
            android:inputType="text"
            android:maxLength="7"
            tools:ignore="TouchTargetSizeCheck" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/codmateria" />

        <EditText
            android:id="@+id/editCodmateria"
            android:hint="@string/codmateria"
            android:inputType="text"
            android:maxLength="6"
            tools:ignore="TouchTargetSizeCheck" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/ciclo" />

        <EditText
            android:id="@+id/editCiclo"
            android:hint="@string/ciclo"
            android:inputType="number"
            android:maxLength="5"
            tools:ignore="TouchTargetSizeCheck" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/notafinal" />

        <EditText
            android:id="@+id/editNotafinal"
            android:hint="@string/notafinal"
            android:inputType="text"
            android:maxLength="4"
            tools:ignore="TouchTargetSizeCheck" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/opciones" />

        <Button
            android:layout_width="178dp"
            android:onClick="insertarNota"
            android:text="@string/insertar" />

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />

    </TableRow>
    <TableRow>

    </TableRow>
</TableLayout>