<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/carnet" />

        <EditText
            android:id="@+id/editCarnet"
            android:hint="@string/carnet"
            android:inputType="text"
            android:maxLength="7"
            tools:ignore="TouchTargetSizeCheck" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/codmatnota" />

        <EditText
            android:id="@+id/editCodigo"
            android:hint="@string/codmatnota"
            android:inputType="text"
            android:maxLength="6"
            tools:ignore="TouchTargetSizeCheck" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/ciclo" />

        <EditText
            android:id="@+id/editCiclo"
            android:hint="@string/ciclo"
            android:inputType="text"
            android:maxLength="5"
            tools:ignore="TouchTargetSizeCheck" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/notafinal" />

        <EditText
            android:id="@+id/editNota"
            android:hint="@string/notafinal"
            android:inputType="numberDecimal"
            tools:ignore="TouchTargetSizeCheck" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarNota"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>