<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carnet"/>

    <EditText
        android:id="@+id/editCarnet"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/carnet"
        android:inputType="text"
        android:maxLength="7"
        android:minHeight="48dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codmateria"/>

    <EditText
        android:id="@+id/editCodmateria"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/codmateria"
        android:inputType="text"
        android:maxLength="7"
        android:minHeight="48dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ciclo" />

    <EditText
        android:id="@+id/editCiclo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/ciclo"
        android:inputType="number"
        android:maxLength="5"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/botonConsultar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="consultarNota"
        android:text="@string/consultar" />

    <Button
        android:id="@+id/botonLimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="limpiarTexto"
        android:text="@string/limpiar" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notafinal" />

    <EditText
        android:id="@+id/editNotafinal"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/notafinal"
        android:inputType="text"
        android:longClickable="false"
        android:minHeight="48dp" />
</LinearLayout>