<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codmateria"/>

        <EditText
            android:id="@+id/editCodmateria"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/codmateria"
            android:inputType="text"
            android:maxLength="7"
            android:minHeight="48dp"/>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opciones" />
        <Button
            android:id="@+id/botonConsultar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="consultarMateria"
            android:text="@string/consultar" />
        <Button
            android:id="@+id/botonLimpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />

    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nommateria" />

        <EditText
            android:id="@+id/editNommateria"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/nommateria"
            android:inputType="text"
            android:minHeight="48dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unidadesval" />

        <EditText
            android:id="@+id/editUnidadesval"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/unidadesval"
            android:inputType="number"
            android:longClickable="false"
            android:minHeight="48dp"/>

</LinearLayout>